tests/baselines/reference/scannerNumericLiteral3.errors.txt
tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral3.ts(1,3): error TS1005: ';' expected.


==== tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral3.ts (1 errors) ====
    01.0
      ~~
!!! error TS1005: ';' expected.